<resources>
    <string name="app_name">Graduation_nano_program_ITI</string>

    <string-array name="colors">
        <item>@color/primary</item>
        <item>@color/accent</item>
        <item>@color/Brown</item>
        <item>@color/Cyan</item>
        <item>@color/Beige</item>
        <item>@color/Coral</item>
        <item>@color/Chocolate</item>
        <item>@color/Green</item>
        <item>@color/DarkViolet</item>
        <item>@color/WhiteSmoke</item>
        <item>@color/Black</item>
        <item>@color/Blue</item>
        <item>@color/DarkRed</item>
        <item>@color/DodgerBlue</item>
        <item>@color/YellowGreen</item>
    </string-array>
    <string name="title_activity_charity_profile">CharityProfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login --><string name="login">Sign In</string>
    <string name="signup">Sign up</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="username">User Name</string>
    <string name="Vusername">please enter user name</string>
    <string name="password"> Password</string>
    <string name="Vpassword">please enter password</string>
    <string name="confirmpassword">COnfirm Password</string>
    <string name="Vconfrimpassword"> password miss match</string>
    <string name="email">Email</string>
    <string name="Vemail">please enter email</string>
    <string name="phone">Phone</string>
    <string name="Vphone">please enter phone</string>
    <string name="address">Address</string>
    <string name="Vaddress">please enter address</string>
    <string name="rdrestaurant">Restaurant</string>
    <string name="rdcharity">Charity</string>
    <string name="charityname">Charity Name</string>
    <string name="Vcharityname">please enter charity name</string>
    <string name="restaurantname">Restaurant Name</string>
    <string name="Vrestaurantname">please enter restaurant name</string>
    <string name="save">Save</string>
    <string name="restorepassword">Restore Password</string>
    <string name="VemailRestore">enter email address</string>
    <string name="forgethint">Enter the email address you registered with and we will send the password to this email</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--  Strings relatred to restaurant profile-->
    <string name="xUserName"> username</string>
    <string name="xPassword"> password</string>
    <string name="xEmail"> Email</string>
    <string name="xPhone"> phone</string>
    <string name="xAddress"> Address</string>
    <string name="xEditRestaurantFinish">Save</string>
    <string name="xCancelEditRestaurant">cancel</string>
    <string name="xFoodQ"> food quantity</string>
    <string name="xEstimatedTime">estimated time</string>
    <string name="xbtnConfirmSend">Send</string>
    <string name="xCancel">Cancel</string>
    <string name="btnSubmit">Rate</string>
    <string name="fragment_about">About us</string>
    <string name="fragment_edit_restaurant_profile">Edit Profile</string>
    <string name="fragment_logout">Logout</string>
    <string name="fragment_restaurant_profile">Home</string>
    <string name="tv_requesrTitle">Request to Charity</string>
    <string name="tv_rateCharity">Rate Charity</string>

    <!-- Strings related to navigation drawer items-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Members</item>
        <item>Edit Profile</item>
        <item>About Us</item>
        <item>Logout</item>
    </string-array>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
