<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="8dp"
    android:gravity="center"
    android:weightSum="1">
    <TextView
        android:id="@+id/tv_requestTitle"
        android:text="@string/tv_requestTitle"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    />
    <com.tuyenmonkey.mkloader.MKLoader
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mk_type="Sharingan"
        app:mk_color="@color/AliceBlue"
        android:layout_gravity="center"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/xinput_layout_foodQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/xFoodQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xFoodQ"
            android:textColorHint="@color/WhiteSmoke"
                  />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/xinput_layout_estimatedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/xEstimatedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xEstimatedTime"
            android:textColorHint="@color/WhiteSmoke" />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"

        >
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xbtnConfirmSend"
        android:textAllCaps="false"
        android:background="@drawable/txtstyle_white"
        android:layout_margin="3dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/accent_dark"
        android:id="@+id/xbtnConfirmSend"
         android:textSize="18sp"
        android:layout_marginRight="20dp" />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xCancel"
        android:textAllCaps="false"
        android:background="@drawable/txtstyle_white"
        android:layout_margin="3dp"
        android:id="@+id/xCancel"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        android:textColor="@color/accent_dark"
        />
    </LinearLayout>

</LinearLayout>