<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registeration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.itimobiletrack.graduation_nano_program_iti.Registeration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingTop="4dp"
            >
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/ximgbtn"
                android:src="@drawable/pl"
                android:layout_gravity="center"
                />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/username_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                >

                <EditText
                    android:id="@+id/xUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />

           </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/password_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                >

                <EditText
                    android:id="@+id/xPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

           </com.github.florent37.materialtextfield.MaterialTextField>


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/password_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                >

                <EditText
                    android:id="@+id/xConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    />
</com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/emailicon"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                >
                <EditText
                    android:id="@+id/xEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    />
</com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/phone"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                >

                <EditText
                    android:id="@+id/xPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    />
</com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/address"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                >

                <EditText
                    android:id="@+id/xAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />

</com.github.florent37.materialtextfield.MaterialTextField>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/rdrestaurant"
                android:padding="4dp"
                android:id="@+id/xrdRestaurant"
                android:textColor="@color/Black"
                android:layout_weight="1"
                ></android.support.v7.widget.AppCompatRadioButton>


            <android.support.v7.widget.AppCompatRadioButton
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/rdcharity"
                android:padding="4dp"
                android:id="@+id/xrdCharity"
                android:textColor="@color/Black"
                android:layout_weight="1"
                ></android.support.v7.widget.AppCompatRadioButton>
            </RadioGroup>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/username_icon"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:mtf_cardCollapsedHeight="4dp"
                app:mtf_animationDuration="1000"
                app:mtf_openKeyboardOnFocus="true"
                android:layout_marginBottom="8dp"
                >

                <EditText
                    android:id="@+id/xCharityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
</com.github.florent37.materialtextfield.MaterialTextField>

            <com.andexert.library.RippleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/more2"
                android:layout_margin="5dp"
                android:gravity="center"
                rv_centered="true">
            <Button
                android:onClick="toSaveInfo"
                android:id="@+id/xbtnsave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtstyle"
                android:text="@string/save"
                android:textColor="@color/WhiteSmoke"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                />
            </com.andexert.library.RippleView>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
