<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itimobiletrack.graduation_nano_program_iti.Restaurant.RestaurantProfile">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        >

    <!--<TextView-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginBottom="25dp"-->
        <!--android:textColor="#00A5F1"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="50sp"-->
        <!--android:gravity="center"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Re-restaurant"-->
        <!--android:id="@+id/xTitle"-->
        <!--/>-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true">

        <EditText
            android:textColor="@color/primary"
            android:id="@+id/xUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xUserName"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:textColor="@color/primary"
            android:id="@+id/xPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <!--<EditText-->
            <!--android:textColor="@color/primary"-->
            <!--android:visibility="gone"-->
            <!--android:id="@+id/xConfirmPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="enter confirmPassword"-->
            <!--android:inputType="textPassword"-->
            <!--/>-->

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:textColor="@color/primary"
            android:id="@+id/xEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:textColor="@color/primary"
            android:id="@+id/xPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xPhone"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:textColor="@color/primary"
            android:id="@+id/xAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/xAddress"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

        <TabWidget
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/xEditRestaurantFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xEditRestaurantFinish"
                android:layout_marginTop="0dp"
                style="?android:textAppearanceSmall"
                android:background="@drawable/txtstyle"
                android:textColor="@color/GhostWhite"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20sp"


                />

            <Button
                android:id="@+id/xCancelEditRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xCancelEditRestaurant"
                style="?android:textAppearanceSmall"
                android:layout_marginTop="0dp"
                android:background="@drawable/txtstyle"
                android:textColor="@color/GhostWhite"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20sp"

                />
        </TabWidget>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
