<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fef6eb"
    tools:context="com.example.itimobiletrack.graduation_nano_program_iti.LoginActivity">

    <ScrollView

        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            >



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/txtemail"
                android:layout_centerVertical="true"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/username_icon"
                    android:singleLine="true"
                    android:textColor="@color/primary"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/txtpassword"
                android:textColor="@color/primary"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/password_icon"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:background="@drawable/txtstyle"
                android:textColor="@color/GhostWhite"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20sp"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/txtstyle"
                android:textColor="@color/GhostWhite"
                android:text="@string/signup"
                android:onClick="toSignUp"
                android:textAllCaps="false"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgetpass"
                android:textColor="@color/primary"
                android:onClick="toForgetPassword"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />


        </LinearLayout>




    </ScrollView>
</LinearLayout>
